[gd_scene load_steps=7 format=4 uid="uid://cu2535exncqeo"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_0matt"]
[ext_resource type="Texture2D" uid="uid://bmnh2e5dbberk" path="res://assets/tilesets/Dungeon_Tileset.png" id="1_qiapj"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xluxj"]
texture = ExtResource("1_qiapj")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0

[sub_resource type="TileSet" id="TileSet_83b8r"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_xluxj")

[sub_resource type="PortableCompressedTexture2D" id="PortableCompressedTexture2D_7flv7"]
_data = PackedByteArray("AAADAAUAAAABAAAAEAAAABAAAABQAAAAUklGRkgAAABXRUJQVlA4TDsAAAAvD8ADEBcwzrMyaPMfgAcGkSQ1GpwhITvIqDkTpNf5hYaI/k8A7yFCKj8mF2QNZA7kG5g74El/n9IxKgA=")
size_override = Vector2(16, 16)

[sub_resource type="ButtonGroup" id="ButtonGroup_6avti"]

[node name="Game" type="Node"]
script = ExtResource("1_0matt")

[node name="Level" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABAAEAAAABAAEAAAAiABIAAAAEAAMAAAACAAIAAAAGAAAAAAACAAMAAAAGAAEAAAACAAQAAAAGAAIAAAADAAIAAAAHAAAAAAADAAMAAAAHAAEAAAADAAQAAAAHAAIAAAAEAAIAAAAIAAAAAAAEAAMAAAAIAAEAAAAEAAQAAAAIAAIAAAAFAAIAAAAJAAAAAAAFAAMAAAAJAAEAAAAFAAQAAAAJAAIAAAACAAUAAAAGAAAAAAACAAYAAAAGAAEAAAACAAcAAAAGAAIAAAADAAUAAAAHAAAAAAADAAYAAAAHAAEAAAADAAcAAAAHAAIAAAAEAAUAAAAIAAAAAAAEAAYAAAAIAAEAAAAEAAcAAAAIAAIAAAAFAAUAAAAJAAAAAAAFAAYAAAAJAAEAAAAFAAcAAAAJAAIAAAAGAAUAAAAGAAAAAAAGAAYAAAAGAAEAAAAGAAcAAAAGAAIAAAAHAAUAAAAHAAAAAAAHAAYAAAAHAAEAAAAHAAcAAAAHAAIAAAAIAAUAAAAIAAAAAAAIAAYAAAAIAAEAAAAIAAcAAAAIAAIAAAAJAAUAAAAJAAAAAAAJAAYAAAAJAAEAAAAJAAcAAAAJAAIAAAAGAAIAAAAGAAAAAAAGAAMAAAAGAAEAAAAGAAQAAAAGAAIAAAAHAAIAAAAHAAAAAAAHAAMAAAAHAAEAAAAHAAQAAAAHAAIAAAAIAAIAAAAIAAAAAAAIAAMAAAAIAAEAAAAIAAQAAAAIAAIAAAAJAAIAAAAJAAAAAAAJAAMAAAAJAAEAAAAJAAQAAAAJAAIAAAAKAAIAAAAGAAAAAAAKAAMAAAAGAAEAAAAKAAQAAAAGAAIAAAALAAIAAAAHAAAAAAALAAMAAAAHAAEAAAALAAQAAAAHAAIAAAAMAAIAAAAIAAAAAAAMAAMAAAAIAAEAAAAMAAQAAAAIAAIAAAANAAIAAAAJAAAAAAANAAMAAAAJAAEAAAANAAQAAAAJAAIAAAAKAAUAAAAGAAAAAAAKAAYAAAAGAAEAAAAKAAcAAAAGAAIAAAALAAUAAAAHAAAAAAALAAYAAAAHAAEAAAALAAcAAAAHAAIAAAAMAAUAAAAIAAAAAAAMAAYAAAAIAAEAAAAMAAcAAAAIAAIAAAANAAUAAAAJAAAAAAANAAYAAAAJAAEAAAANAAcAAAAJAAIAAAAOAAUAAAAGAAAAAAAOAAYAAAAGAAEAAAAOAAcAAAAGAAIAAAAPAAUAAAAHAAAAAAAPAAYAAAAHAAEAAAAPAAcAAAAHAAIAAAAQAAUAAAAIAAAAAAAQAAYAAAAIAAEAAAAQAAcAAAAIAAIAAAARAAUAAAAJAAAAAAARAAYAAAAJAAEAAAARAAcAAAAJAAIAAAAOAAIAAAAGAAAAAAAOAAMAAAAGAAEAAAAOAAQAAAAGAAIAAAAPAAIAAAAHAAAAAAAPAAMAAAAHAAEAAAAPAAQAAAAHAAIAAAAQAAIAAAAIAAAAAAAQAAMAAAAIAAEAAAAQAAQAAAAIAAIAAAARAAIAAAAJAAAAAAARAAMAAAAJAAEAAAARAAQAAAAJAAIAAAASAAIAAAAGAAAAAAASAAMAAAAGAAEAAAASAAQAAAAGAAIAAAATAAIAAAAHAAAAAAATAAMAAAAHAAEAAAATAAQAAAAHAAIAAAAUAAIAAAAIAAAAAAAUAAMAAAAIAAEAAAAUAAQAAAAIAAIAAAAVAAIAAAAJAAAAAAAVAAMAAAAJAAEAAAAVAAQAAAAJAAIAAAASAAUAAAAGAAAAAAASAAYAAAAGAAEAAAASAAcAAAAGAAIAAAATAAUAAAAHAAAAAAATAAYAAAAHAAEAAAATAAcAAAAHAAIAAAAUAAUAAAAIAAAAAAAUAAYAAAAIAAEAAAAUAAcAAAAIAAIAAAAVAAUAAAAJAAAAAAAVAAYAAAAJAAEAAAAVAAcAAAAJAAIAAAAWAAIAAAAGAAAAAAAWAAMAAAAGAAEAAAAWAAQAAAAGAAIAAAAXAAIAAAAHAAAAAAAXAAMAAAAHAAEAAAAXAAQAAAAHAAIAAAAYAAIAAAAIAAAAAAAYAAMAAAAIAAEAAAAYAAQAAAAIAAIAAAAZAAIAAAAJAAAAAAAZAAMAAAAJAAEAAAAZAAQAAAAJAAIAAAAWAAUAAAAGAAAAAAAWAAYAAAAGAAEAAAAWAAcAAAAGAAIAAAAXAAUAAAAHAAAAAAAXAAYAAAAHAAEAAAAXAAcAAAAHAAIAAAAYAAUAAAAIAAAAAAAYAAYAAAAIAAEAAAAYAAcAAAAIAAIAAAAZAAUAAAAJAAAAAAAZAAYAAAAJAAEAAAAZAAcAAAAJAAIAAAAWAAgAAAAGAAAAAAAWAAkAAAAGAAEAAAAWAAoAAAAGAAIAAAAXAAgAAAAHAAAAAAAXAAkAAAAHAAEAAAAXAAoAAAAHAAIAAAAYAAgAAAAIAAAAAAAYAAkAAAAIAAEAAAAYAAoAAAAIAAIAAAAZAAgAAAAJAAAAAAAZAAkAAAAJAAEAAAAZAAoAAAAJAAIAAAASAAgAAAAGAAAAAAASAAkAAAAGAAEAAAASAAoAAAAGAAIAAAATAAgAAAAHAAAAAAATAAkAAAAHAAEAAAATAAoAAAAHAAIAAAAUAAgAAAAIAAAAAAAUAAkAAAAIAAEAAAAUAAoAAAAIAAIAAAAVAAgAAAAJAAAAAAAVAAkAAAAJAAEAAAAVAAoAAAAJAAIAAAAOAAgAAAAGAAAAAAAOAAkAAAAGAAEAAAAOAAoAAAAGAAIAAAAPAAgAAAAHAAAAAAAPAAkAAAAHAAEAAAAPAAoAAAAHAAIAAAAQAAgAAAAIAAAAAAAQAAkAAAAIAAEAAAAQAAoAAAAIAAIAAAARAAgAAAAJAAAAAAARAAkAAAAJAAEAAAARAAoAAAAJAAIAAAAKAAgAAAAGAAAAAAAKAAkAAAAGAAEAAAAKAAoAAAAGAAIAAAALAAgAAAAHAAAAAAALAAkAAAAHAAEAAAALAAoAAAAHAAIAAAAMAAgAAAAIAAAAAAAMAAkAAAAIAAEAAAAMAAoAAAAIAAIAAAANAAgAAAAJAAAAAAANAAkAAAAJAAEAAAANAAoAAAAJAAIAAAAGAAgAAAAGAAAAAAAGAAkAAAAGAAEAAAAGAAoAAAAGAAIAAAAHAAgAAAAHAAAAAAAHAAkAAAAHAAEAAAAHAAoAAAAHAAIAAAAIAAgAAAAIAAAAAAAIAAkAAAAIAAEAAAAIAAoAAAAIAAIAAAAJAAgAAAAJAAAAAAAJAAkAAAAJAAEAAAAJAAoAAAAJAAIAAAACAAgAAAAGAAAAAAACAAkAAAAGAAEAAAACAAoAAAAGAAIAAAADAAgAAAAHAAAAAAADAAkAAAAHAAEAAAADAAoAAAAHAAIAAAAEAAgAAAAIAAAAAAAEAAkAAAAIAAEAAAAEAAoAAAAIAAIAAAAFAAgAAAAJAAAAAAAFAAkAAAAJAAEAAAAFAAoAAAAJAAIAAAACAAsAAAAGAAAAAAACAAwAAAAGAAEAAAACAA0AAAAGAAIAAAADAAsAAAAHAAAAAAADAAwAAAAHAAEAAAADAA0AAAAHAAIAAAAEAAsAAAAIAAAAAAAEAAwAAAAIAAEAAAAEAA0AAAAIAAIAAAAFAAsAAAAJAAAAAAAFAAwAAAAJAAEAAAAFAA0AAAAJAAIAAAAGAAsAAAAGAAAAAAAGAAwAAAAGAAEAAAAGAA0AAAAGAAIAAAAHAAsAAAAHAAAAAAAHAAwAAAAHAAEAAAAHAA0AAAAHAAIAAAAIAAsAAAAIAAAAAAAIAAwAAAAIAAEAAAAIAA0AAAAIAAIAAAAJAAsAAAAJAAAAAAAJAAwAAAAJAAEAAAAJAA0AAAAJAAIAAAAKAAsAAAAGAAAAAAAKAAwAAAAGAAEAAAAKAA0AAAAGAAIAAAALAAsAAAAHAAAAAAALAAwAAAAHAAEAAAALAA0AAAAHAAIAAAAMAAsAAAAIAAAAAAAMAAwAAAAIAAEAAAAMAA0AAAAIAAIAAAANAAsAAAAJAAAAAAANAAwAAAAJAAEAAAANAA0AAAAJAAIAAAAOAAsAAAAGAAAAAAAOAAwAAAAGAAEAAAAOAA0AAAAGAAIAAAAPAAsAAAAHAAAAAAAPAAwAAAAHAAEAAAAPAA0AAAAHAAIAAAAQAAsAAAAIAAAAAAAQAAwAAAAIAAEAAAAQAA0AAAAIAAIAAAARAAsAAAAJAAAAAAARAAwAAAAJAAEAAAARAA0AAAAJAAIAAAASAAsAAAAGAAAAAAASAAwAAAAGAAEAAAASAA0AAAAGAAIAAAATAAsAAAAHAAAAAAATAAwAAAAHAAEAAAATAA0AAAAHAAIAAAAUAAsAAAAIAAAAAAAUAAwAAAAIAAEAAAAUAA0AAAAIAAIAAAAVAAsAAAAJAAAAAAAVAAwAAAAJAAEAAAAVAA0AAAAJAAIAAAAWAAsAAAAGAAAAAAAWAAwAAAAGAAEAAAAWAA0AAAAGAAIAAAAXAAsAAAAHAAAAAAAXAAwAAAAHAAEAAAAXAA0AAAAHAAIAAAAYAAsAAAAIAAAAAAAYAAwAAAAIAAEAAAAYAA0AAAAIAAIAAAAZAAsAAAAJAAAAAAAZAAwAAAAJAAEAAAAZAA0AAAAJAAIAAAAaAAgAAAAGAAAAAAAaAAkAAAAGAAEAAAAaAAoAAAAGAAIAAAAbAAgAAAAHAAAAAAAbAAkAAAAHAAEAAAAbAAoAAAAHAAIAAAAcAAgAAAAIAAAAAAAcAAkAAAAIAAEAAAAcAAoAAAAIAAIAAAAdAAgAAAAJAAAAAAAdAAkAAAAJAAEAAAAdAAoAAAAJAAIAAAAaAAsAAAAGAAAAAAAaAAwAAAAGAAEAAAAaAA0AAAAGAAIAAAAbAAsAAAAHAAAAAAAbAAwAAAAHAAEAAAAbAA0AAAAHAAIAAAAcAAsAAAAIAAAAAAAcAAwAAAAIAAEAAAAcAA0AAAAIAAIAAAAdAAsAAAAJAAAAAAAdAAwAAAAJAAEAAAAdAA0AAAAJAAIAAAAeAAsAAAAGAAAAAAAeAAwAAAAGAAEAAAAeAA0AAAAGAAIAAAAfAAsAAAAHAAAAAAAfAAwAAAAHAAEAAAAfAA0AAAAHAAIAAAAgAAsAAAAIAAAAAAAgAAwAAAAIAAEAAAAgAA0AAAAIAAIAAAAhAAsAAAAJAAAAAAAhAAwAAAAJAAEAAAAhAA0AAAAJAAIAAAAeAAgAAAAGAAAAAAAeAAkAAAAGAAEAAAAeAAoAAAAGAAIAAAAfAAgAAAAHAAAAAAAfAAkAAAAHAAEAAAAfAAoAAAAHAAIAAAAgAAgAAAAIAAAAAAAgAAkAAAAIAAEAAAAgAAoAAAAIAAIAAAAhAAgAAAAJAAAAAAAhAAkAAAAJAAEAAAAhAAoAAAAJAAIAAAAeAAUAAAAGAAAAAAAeAAYAAAAGAAEAAAAeAAcAAAAGAAIAAAAfAAUAAAAHAAAAAAAfAAYAAAAHAAEAAAAfAAcAAAAHAAIAAAAgAAUAAAAIAAAAAAAgAAYAAAAIAAEAAAAgAAcAAAAIAAIAAAAhAAUAAAAJAAAAAAAhAAYAAAAJAAEAAAAhAAcAAAAJAAIAAAAaAAUAAAAGAAAAAAAaAAYAAAAGAAEAAAAaAAcAAAAGAAIAAAAbAAUAAAAHAAAAAAAbAAYAAAAHAAEAAAAbAAcAAAAHAAIAAAAcAAUAAAAIAAAAAAAcAAYAAAAIAAEAAAAcAAcAAAAIAAIAAAAdAAUAAAAJAAAAAAAdAAYAAAAJAAEAAAAdAAcAAAAJAAIAAAAaAAIAAAAGAAAAAAAaAAMAAAAGAAEAAAAaAAQAAAAGAAIAAAAbAAIAAAAHAAAAAAAbAAMAAAAHAAEAAAAbAAQAAAAHAAIAAAAcAAIAAAAIAAAAAAAcAAMAAAAIAAEAAAAcAAQAAAAIAAIAAAAdAAIAAAAJAAAAAAAdAAMAAAAJAAEAAAAdAAQAAAAJAAIAAAAeAAIAAAAGAAAAAAAeAAMAAAAGAAEAAAAeAAQAAAAGAAIAAAAfAAIAAAAHAAAAAAAfAAMAAAAHAAEAAAAfAAQAAAAHAAIAAAAgAAIAAAAIAAAAAAAgAAMAAAAIAAEAAAAgAAQAAAAIAAIAAAAhAAIAAAAJAAAAAAAhAAMAAAAJAAEAAAAhAAQAAAAJAAIAAAAeAA4AAAAGAAAAAAAeAA8AAAAGAAEAAAAeABAAAAAGAAIAAAAfAA4AAAAHAAAAAAAfAA8AAAAHAAEAAAAfABAAAAAHAAIAAAAgAA4AAAAIAAAAAAAgAA8AAAAIAAEAAAAgABAAAAAIAAIAAAAhAA4AAAAJAAAAAAAhAA8AAAAJAAEAAAAhABAAAAAJAAIAAAAaAA4AAAAGAAAAAAAaAA8AAAAGAAEAAAAaABAAAAAGAAIAAAAbAA4AAAAHAAAAAAAbAA8AAAAHAAEAAAAbABAAAAAHAAIAAAAcAA4AAAAIAAAAAAAcAA8AAAAIAAEAAAAcABAAAAAIAAIAAAAdAA4AAAAJAAAAAAAdAA8AAAAJAAEAAAAdABAAAAAJAAIAAAAWAA4AAAAGAAAAAAAWAA8AAAAGAAEAAAAWABAAAAAGAAIAAAAXAA4AAAAHAAAAAAAXAA8AAAAHAAEAAAAXABAAAAAHAAIAAAAYAA4AAAAIAAAAAAAYAA8AAAAIAAEAAAAYABAAAAAIAAIAAAAZAA4AAAAJAAAAAAAZAA8AAAAJAAEAAAAZABAAAAAJAAIAAAASAA4AAAAGAAAAAAASAA8AAAAGAAEAAAASABAAAAAGAAIAAAATAA4AAAAHAAAAAAATAA8AAAAHAAEAAAATABAAAAAHAAIAAAAUAA4AAAAIAAAAAAAUAA8AAAAIAAEAAAAUABAAAAAIAAIAAAAVAA4AAAAJAAAAAAAVAA8AAAAJAAEAAAAVABAAAAAJAAIAAAAOAA4AAAAGAAAAAAAOAA8AAAAGAAEAAAAOABAAAAAGAAIAAAAPAA4AAAAHAAAAAAAPAA8AAAAHAAEAAAAPABAAAAAHAAIAAAAQAA4AAAAIAAAAAAAQAA8AAAAIAAEAAAAQABAAAAAIAAIAAAARAA4AAAAJAAAAAAARAA8AAAAJAAEAAAARABAAAAAJAAIAAAAKAA4AAAAGAAAAAAAKAA8AAAAGAAEAAAAKABAAAAAGAAIAAAALAA4AAAAHAAAAAAALAA8AAAAHAAEAAAALABAAAAAHAAIAAAAMAA4AAAAIAAAAAAAMAA8AAAAIAAEAAAAMABAAAAAIAAIAAAANAA4AAAAJAAAAAAANAA8AAAAJAAEAAAANABAAAAAJAAIAAAAGAA4AAAAGAAAAAAAGAA8AAAAGAAEAAAAGABAAAAAGAAIAAAAHAA4AAAAHAAAAAAAHAA8AAAAHAAEAAAAHABAAAAAHAAIAAAAIAA4AAAAIAAAAAAAIAA8AAAAIAAEAAAAIABAAAAAIAAIAAAAJAA4AAAAJAAAAAAAJAA8AAAAJAAEAAAAJABAAAAAJAAIAAAACAA4AAAAGAAAAAAACAA8AAAAGAAEAAAACABAAAAAGAAIAAAADAA4AAAAHAAAAAAADAA8AAAAHAAEAAAADABAAAAAHAAIAAAAEAA4AAAAIAAAAAAAEAA8AAAAIAAEAAAAEABAAAAAIAAIAAAAFAA4AAAAJAAAAAAAFAA8AAAAJAAEAAAAFABAAAAAJAAIAAAAiAA8AAAAEAAIAAAAiABAAAAAEAAIAAAAiABEAAAAEAAIAAAAiAAwAAAAEAAIAAAAiAA0AAAAEAAIAAAAiAA4AAAAEAAIAAAAiAAkAAAAEAAIAAAAiAAoAAAAEAAIAAAAiAAsAAAAEAAIAAAAiAAYAAAAEAAIAAAAiAAcAAAAEAAIAAAAiAAgAAAAEAAIAAAAiAAMAAAAEAAIAAAAiAAQAAAAEAAIAAAAiAAUAAAAEAAIAAAAiAAIAAAAEAAIAAAAiAAEAAAAEAAEAAAACAAEAAAACAAEAAAADAAEAAAADAAEAAAAEAAEAAAACAAEAAAAFAAEAAAADAAEAAAAGAAEAAAACAAEAAAAHAAEAAAADAAEAAAAIAAEAAAACAAEAAAAJAAEAAAADAAEAAAAKAAEAAAACAAEAAAALAAEAAAADAAEAAAAMAAEAAAACAAEAAAANAAEAAAADAAEAAAAOAAEAAAACAAEAAAAPAAEAAAADAAEAAAAQAAEAAAACAAEAAAARAAEAAAADAAEAAAASAAEAAAACAAEAAAATAAEAAAADAAEAAAAUAAEAAAACAAEAAAAVAAEAAAADAAEAAAAWAAEAAAACAAEAAAAXAAEAAAADAAEAAAAYAAEAAAACAAEAAAAZAAEAAAADAAEAAAAaAAEAAAACAAEAAAAbAAEAAAADAAEAAAAcAAEAAAACAAEAAAAdAAEAAAADAAEAAAAeAAEAAAACAAEAAAAfAAEAAAADAAEAAAAgAAEAAAACAAEAAAAhAAEAAAADAAEAAAACABIAAAACAAMAAAADABIAAAADAAMAAAAEABIAAAACAAMAAAAFABIAAAADAAMAAAAGABIAAAACAAMAAAAHABIAAAADAAMAAAAIABIAAAACAAMAAAAJABIAAAADAAMAAAAKABIAAAACAAMAAAALABIAAAADAAMAAAAMABIAAAACAAMAAAANABIAAAADAAMAAAAOABIAAAACAAMAAAAPABIAAAADAAMAAAAQABIAAAACAAMAAAARABIAAAADAAMAAAASABIAAAACAAMAAAATABIAAAADAAMAAAAUABIAAAACAAMAAAAVABIAAAADAAMAAAAWABIAAAACAAMAAAAXABIAAAADAAMAAAAYABIAAAACAAMAAAAZABIAAAADAAMAAAAaABIAAAACAAMAAAAbABIAAAADAAMAAAAcABIAAAACAAMAAAAdABIAAAADAAMAAAAeABIAAAACAAMAAAAfABIAAAADAAMAAAAgABIAAAACAAMAAAAhABIAAAADAAMAAAABAAIAAAABAAIAAAABAAMAAAABAAIAAAABAAQAAAABAAIAAAABAAUAAAABAAIAAAABAAYAAAABAAIAAAABAAcAAAABAAIAAAABAAgAAAABAAIAAAABAAkAAAABAAIAAAABAAoAAAABAAIAAAABAAsAAAABAAIAAAABAAwAAAABAAIAAAABAA0AAAABAAIAAAABAA4AAAABAAIAAAABAA8AAAABAAIAAAABABAAAAABAAIAAAABABEAAAABAAIAAAABABIAAAABAAMAAAACABEAAAAHAAEAAAADABEAAAAIAAEAAAAEABEAAAAHAAEAAAAFABEAAAAIAAEAAAAGABEAAAAHAAEAAAAHABEAAAAIAAEAAAAIABEAAAAHAAEAAAAJABEAAAAIAAEAAAAKABEAAAAHAAEAAAALABEAAAAIAAEAAAAMABEAAAAHAAEAAAANABEAAAAIAAEAAAAOABEAAAAHAAEAAAAPABEAAAAIAAEAAAAQABEAAAAHAAEAAAARABEAAAAIAAEAAAASABEAAAAHAAEAAAATABEAAAAIAAEAAAAUABEAAAAHAAEAAAAVABEAAAAIAAEAAAAWABEAAAAHAAEAAAAXABEAAAAIAAEAAAAYABEAAAAHAAEAAAAZABEAAAAIAAEAAAAaABEAAAAHAAEAAAAbABEAAAAIAAEAAAAcABEAAAAHAAEAAAAdABEAAAAIAAEAAAAeABEAAAAHAAEAAAAfABEAAAAIAAEAAAAgABEAAAAHAAEAAAAhABEAAAAIAAEAAAABAAAAAAABAAAAAAACAAAAAAACAAAAAAADAAAAAAADAAAAAAAEAAAAAAAEAAAAAAAFAAAAAAABAAAAAAAGAAAAAAACAAAAAAAHAAAAAAADAAAAAAAIAAAAAAAEAAAAAAAJAAAAAAABAAAAAAAKAAAAAAACAAAAAAALAAAAAAADAAAAAAAMAAAAAAAEAAAAAAANAAAAAAABAAAAAAAOAAAAAAACAAAAAAAPAAAAAAADAAAAAAAQAAAAAAAEAAAAAAARAAAAAAABAAAAAAASAAAAAAACAAAAAAATAAAAAAADAAAAAAAUAAAAAAAEAAAAAAAVAAAAAAABAAAAAAAWAAAAAAACAAAAAAAXAAAAAAADAAAAAAAYAAAAAAAEAAAAAAAZAAAAAAABAAAAAAAaAAAAAAACAAAAAAAbAAAAAAADAAAAAAAcAAAAAAAEAAAAAAAdAAAAAAABAAAAAAAeAAAAAAACAAAAAAAfAAAAAAADAAAAAAAgAAAAAAAEAAAAAAAhAAAAAAABAAAAAAAiAAAAAAACAAAAAAAAAAAAAAAAAAAAAAAjAAAAAAAFAAAAAAAAAAEAAAAAAAEAAAAAAAIAAAAAAAIAAAAAAAMAAAAAAAMAAAAAAAQAAAAAAAEAAAAAAAUAAAAAAAIAAAAAAAYAAAAAAAMAAAAAAAcAAAAAAAEAAAAAAAgAAAAAAAIAAAAAAAkAAAAAAAMAAAAAAAoAAAAAAAEAAAAAAAsAAAAAAAIAAAAAAAwAAAAAAAMAAAAAAA0AAAAAAAEAAAAAAA4AAAAAAAIAAAAAAA8AAAAAAAMAAAAAABAAAAAAAAEAAAAAABEAAAAAAAIAAAAAABIAAAAAAAEAAAAAABMAAAAAAAQAAAAjABMAAAAFAAQAAAABABMAAAABAAQAAAACABMAAAACAAQAAAADABMAAAADAAQAAAAEABMAAAAEAAQAAAAFABMAAAABAAQAAAAGABMAAAACAAQAAAAHABMAAAADAAQAAAAIABMAAAAEAAQAAAAJABMAAAABAAQAAAAKABMAAAACAAQAAAALABMAAAADAAQAAAAMABMAAAAEAAQAAAANABMAAAABAAQAAAAOABMAAAACAAQAAAAPABMAAAADAAQAAAAQABMAAAAEAAQAAAARABMAAAABAAQAAAASABMAAAACAAQAAAATABMAAAADAAQAAAAUABMAAAAEAAQAAAAVABMAAAABAAQAAAAWABMAAAACAAQAAAAXABMAAAADAAQAAAAYABMAAAAEAAQAAAAZABMAAAABAAQAAAAaABMAAAACAAQAAAAbABMAAAADAAQAAAAcABMAAAAEAAQAAAAdABMAAAABAAQAAAAeABMAAAACAAQAAAAfABMAAAADAAQAAAAgABMAAAAEAAQAAAAhABMAAAABAAQAAAAiABMAAAACAAQAAAAjAAEAAAAFAAEAAAAjAAIAAAAFAAIAAAAjAAMAAAAFAAMAAAAjAAQAAAAFAAEAAAAjAAUAAAAFAAIAAAAjAAYAAAAFAAMAAAAjAAcAAAAFAAEAAAAjAAgAAAAFAAIAAAAjAAkAAAAFAAMAAAAjAAoAAAAFAAEAAAAjAAsAAAAFAAIAAAAjAAwAAAAFAAMAAAAjAA0AAAAFAAEAAAAjAA4AAAAFAAIAAAAjAA8AAAAFAAMAAAAjABAAAAAFAAEAAAAjABEAAAAFAAIAAAAjABIAAAAFAAMAAAA=")
tile_set = SubResource("TileSet_83b8r")

[node name="SpawnPoint" type="Marker2D" parent="Level"]
position = Vector2(40, 39)

[node name="SpawnPoint2" type="Marker2D" parent="Level"]
position = Vector2(523, 268)

[node name="SpawnPoint3" type="Marker2D" parent="Level"]
position = Vector2(515, 46)

[node name="SpawnPoint4" type="Marker2D" parent="Level"]
position = Vector2(50, 265)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(288, 179)
zoom = Vector2(0.6, 0.6)

[node name="UI" type="CanvasLayer" parent="."]

[node name="HandUI" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="UI/HandUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.6, 0.6)

[node name="MarginContainer" type="MarginContainer" parent="UI/HandUI/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HandUI/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/HandUI/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="TextureRect" type="TextureRect" parent="UI/HandUI/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
texture_filter = 1
layout_mode = 2
texture = SubResource("PortableCompressedTexture2D_7flv7")
expand_mode = 2
stretch_mode = 4
metadata/_aseprite_wizard_interface_config_ = {
"layer_section": true,
"output_section": false,
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"embed_tex": true,
"i_mode": 1,
"keep_anim_length": false,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": true,
"player": "",
"slice": "",
"source": "res://assets/characters/right_hand.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "7e6cc34b2779b8f433375aebcc1bb5a2"

[node name="HBoxContainer" type="VBoxContainer" parent="UI/HandUI/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="Button" type="Button" parent="UI/HandUI/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
toggle_mode = true
button_group = SubResource("ButtonGroup_6avti")
text = "1"

[node name="Button2" type="Button" parent="UI/HandUI/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
toggle_mode = true
button_group = SubResource("ButtonGroup_6avti")
text = "2"

[node name="Button3" type="Button" parent="UI/HandUI/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
toggle_mode = true
button_group = SubResource("ButtonGroup_6avti")
text = "3"

[node name="Button4" type="Button" parent="UI/HandUI/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
toggle_mode = true
button_group = SubResource("ButtonGroup_6avti")
text = "4"

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HandUI/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/HandUI/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/HandUI/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Active Skill:"

[node name="PanelContainer" type="PanelContainer" parent="UI/HandUI/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/HandUI/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Shoot a laser"

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/HandUI/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/HandUI/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Passive Skill:"

[node name="PanelContainer" type="PanelContainer" parent="UI/HandUI/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/HandUI/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/PanelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "+10% Move Speed"

[node name="MultiplayerControl" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="UI/MultiplayerControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.5
offset_top = -39.0
offset_right = 100.5
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/MultiplayerControl/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MultiplayerControl/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MultiplayerControl/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Zaro's Cave Multiplayer"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MultiplayerControl/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HostButton" type="Button" parent="UI/MultiplayerControl/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host"

[node name="JoinButton" type="Button" parent="UI/MultiplayerControl/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/Characters/player.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="UI/MultiplayerControl/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="UI/MultiplayerControl/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
